# aioips

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: architecture.md  contributing.md  index.md
docs/concepts/: attributes.md  data-model.md  index.md  lifecycle.md  relations-composition.md  search.md
docs/getting-started/: authentication.md  configuration.md  index.md  installation.md  quickstart.md
docs/guides/: editing-objects.md  error-handling.md  files.md  index.md  reading-objects.md  relations.md  searching.md
docs/reference/: all-methods.md  files.md  index.md  metadata.md  objects.md  other-sections.md  relations.md  security.md
examples/: get_current_user.py  get_object_types.py  login_options.py
scripts/: README.md  audit_docs.py  gen_readme.py  gen_reference.py  survey_uncovered.py
src/aioips/: __init__.py  client.py
src/aioips/common/: __init__.py
src/aioips/core/: __init__.py  auth.py  config.py  core.py  exceptions.py  observability.py  sessions.py
src/aioips/infrastructure/: __init__.py
src/aioips/methods/: __init__.py
src/aioips/schemas/: __init__.py  base.py
tests/: conftest.py
tests/test_core/: test_auth.py  test_config.py  test_exceptions.py  test_request_engine.py  test_sessions.py
tests/test_infrastructure/: test_logging.py
tests/test_methods/: test_current_user_info.py  test_login_options.py  test_object_types.py
tests/test_methods/test_archives/: test_archive_can_apply_settings.py
tests/test_methods/test_attribute_history/: test_attribute_history.py
tests/test_methods/test_auth/: test_auth_tokens.py
tests/test_methods/test_bridge/: test_bridge_download.py  test_bridge_read.py  test_bridge_writes.py
tests/test_methods/test_briefcase/: test_briefcase.py  test_briefcase_writes.py
tests/test_methods/test_calendars/: test_calendar_writes.py  test_calendars_read.py  test_calendars_reads_extra.py
tests/test_methods/test_config/: test_config_read.py
tests/test_methods/test_crypto_signing/: test_crypto_signing_read.py  test_crypto_signing_writes.py
tests/test_methods/test_discussions/: test_discussions_image.py  test_discussions_read.py  test_discussions_writes.py
tests/test_methods/test_docs/: test_docs.py
tests/test_methods/test_document_editor/: test_document_editor_content.py  test_document_editor_read.py  test_document_editor_writes.py
tests/test_methods/test_documents/: test_document_prototypes_writes.py  test_documents_read.py  test_save_document_settings.py
tests/test_methods/test_editing_contexts/: test_editing_contexts.py
tests/test_methods/test_file_systems/: test_create_directory.py  test_file_systems_read.py  test_file_systems_search.py
tests/test_methods/test_files/: test_files_names_service.py  test_files_object_mutations.py  test_files_prototype_swap.py  test_files_read.py  test_files_table_reads.py  test_files_temp.py
tests/test_methods/test_forms/: test_forms_finds.py  test_forms_read.py  test_forms_reads_extra.py  test_save_form_widget.py
tests/test_methods/test_graph_signs/: test_graph_signs_read.py  test_graph_signs_writes.py  test_object_type_lifecycle_step_sign_settings.py
tests/test_methods/test_imbase/: test_imbase_object_params.py  test_imbase_object_writes.py  test_imbase_read.py  test_imbase_safe_ops.py  test_imbase_search.py  test_imbase_tables.py
tests/test_methods/test_improjects/: test_improjects_read.py  test_improjects_reads_extra.py  test_improjects_writes.py
tests/test_methods/test_imviewer/: test_imviewer_assembly_composition.py  test_imviewer_read.py
tests/test_methods/test_licenses/: test_licenses_encrypt.py  test_licenses_read.py
tests/test_methods/test_mail_agent/: test_mail_agent_read.py
tests/test_methods/test_measure_units/: test_measure_units_read.py
tests/test_methods/test_metadata/: test_applicability_accessors.py  test_applicability_read.py  test_attribute_for_type.py  (+15 more)
vault/: README.md  gotchas.md
vault/api/: auth.md
vault/architecture/: ADR-0001-client-architecture.md  ADR-0002-auth-token-lifecycle.md  ADR-0003-naming-convention.md  layers.md
vault/knowledge/: ips-object-model.md  ips-web-api-overview.md  performance-baseline.md
(+998 files in other folders)
